--- a/code/00.00-WGBSseq-reads-FastQC-MultiQC.Rmd
+++ b/code/00.00-WGBSseq-reads-FastQC-MultiQC.Rmd
@@ -46,10 +46,9 @@ echo "#### Assign Variables ####"
 echo ""
 
 echo "# Data directories"
-echo 'export repo_dir=/gscratch/scrubbed/samwhite/gitrepos/project-mytilus-methylation'
-echo 'export output_dir_top=${repo_dir}/output/00.00-WGBSseq-reads-FastQC-MultiQC'
-echo 'export raw_fastqc_dir=${repo_dir}/${output_dir_top}/raw-fastqc'
-echo 'export raw_reads_dir=${repo_dir}/data/raw-wgbs'
+echo 'export output_dir_top="../output/00.00-WGBSseq-reads-FastQC-MultiQC"'
+echo 'export raw_fastqc_dir="${output_dir_top}/raw-fastqc"'
+echo 'export raw_reads_dir="../data/raw-wgbs"'
 echo 'export raw_reads_url="https://owl.fish.washington.edu/nightingales/M_trossulus/"'
 echo ""
 
