knit 00.00-WGBSseq-reads-FastQC-MultiQC.Rmd to MD, HTML

--- a/code/00.00-WGBSseq-reads-FastQC-MultiQC.md
+++ b/code/00.00-WGBSseq-reads-FastQC-MultiQC.md
@@ -1,46 +1,29 @@
----
-title: "00.00-WGBSseq-reads-FastQC-MultiQC.Rmd"
-author: "Sam White"
-date: "2024-11-07"
-output: 
-  bookdown::html_document2:
-    theme: cosmo
-    toc: true
-    toc_float: true
-    number_sections: true
-    code_folding: show
-    code_download: true
-  github_document:
-    toc: true
-    number_sections: true
-  html_document:
-    theme: cosmo
-    toc: true
-    toc_float: true
-    number_sections: true
-    code_folding: show
-    code_download: true
-bibliography: references.bib
----
+00.00-WGBSseq-reads-FastQC-MultiQC.Rmd
+================
+Sam White
+2024-11-07
 
-```{r setup, include=FALSE}
-library(knitr)
-knitr::opts_chunk$set(
-  echo = TRUE,         # Display code chunks
-  eval = FALSE,        # Evaluate code chunks
-  warning = FALSE,     # Hide warnings
-  message = FALSE,     # Hide messages
-  comment = ""         # Prevents appending '##' to beginning of lines in code output
-)
-```
+- <a href="#1-create-a-bash-variables-file"
+  id="toc-1-create-a-bash-variables-file">1 Create a Bash variables
+  file</a>
+- <a href="#2-download-raw-fastqs" id="toc-2-download-raw-fastqs">2
+  Download raw FastQs</a>
+  - <a href="#21-download-raw-reads" id="toc-21-download-raw-reads">2.1
+    Download raw reads</a>
+  - <a href="#22-verify-raw-read-checksums"
+    id="toc-22-verify-raw-read-checksums">2.2 Verify raw read checksums</a>
+- <a href="#3-fastqcmultiqc-on-raw-reads"
+  id="toc-3-fastqcmultiqc-on-raw-reads">3 FastQC/MultiQC on raw reads</a>
 
-This Rmd file will download raw WGBSseq FastQs and evaluate them using [FastQC](https://github.com/s-andrews/FastQC) and [MultiQC](https://multiqc.info/)[@ewels2016].
+This Rmd file will download raw WGBSseq FastQs and evaluate them using
+[FastQC](https://github.com/s-andrews/FastQC) and
+[MultiQC](https://multiqc.info/)(Ewels et al. 2016).
 
-# Create a Bash variables file
+# 1 Create a Bash variables file
 
 This allows usage of Bash variables across R Markdown chunks.
 
-```{r save-bash-variables-to-rvars-file, engine='bash', eval=TRUE}
+``` bash
 {
 echo "#### Assign Variables ####"
 echo ""
@@ -80,13 +63,40 @@ echo ""
 cat .bashvars
 ```
 
-# Download raw FastQs
+    #### Assign Variables ####
 
-## Download raw reads
+    # Data directories
+    export output_dir_top="../output/00.00-WGBSseq-reads-FastQC-MultiQC"
+    export raw_fastqc_dir="${output_dir_top}/raw-fastqc"
+    export raw_reads_dir="../data/raw-wgbs"
+    export raw_reads_url="https://owl.fish.washington.edu/nightingales/M_trossulus/"
 
-Reads are downloaded from <https://owl.fish.washington.edu/nightingales/M_trossulus/>
+    # Set FastQ filename patterns
+    export fastq_pattern='*.fastq.gz'
+    export R1_fastq_pattern='*_1.fastq.gz'
+    export R2_fastq_pattern='*_2.fastq.gz'
 
-```{bash download-raw-reads, engine='bash', eval=FALSE}
+    # Set number of CPUs to use
+    export threads=50
+
+    ## Inititalize arrays
+    export fastq_array_R1=()
+    export fastq_array_R2=()
+    export raw_fastqs_array=()
+    export R1_names_array=()
+    export R2_names_array=()
+
+    # Print formatting
+    export line="--------------------------------------------------------"
+
+# 2 Download raw FastQs
+
+## 2.1 Download raw reads
+
+Reads are downloaded from
+<https://owl.fish.washington.edu/nightingales/M_trossulus/>
+
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -106,12 +116,11 @@ wget \
 --level=1 \
 --accept "[0-9]M*.fastq.gz,[0-9]M*.fastq.gz.md5sum" \
 ${raw_reads_url}
-
 ```
 
-## Verify raw read checksums
+## 2.2 Verify raw read checksums
 
-```{bash verify-raw-read-checksums, engine='bash', eval=FALSE}
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -124,9 +133,9 @@ do
 done
 ```
 
-# FastQC/MultiQC on raw reads
+# 3 FastQC/MultiQC on raw reads
 
-```{bash raw-fastqc-multiqc, engine='bash', eval=FALSE}
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -178,5 +187,17 @@ echo ""
 
 # View directory contents
 ls -lh ${raw_fastqc_dir}
-
 ```
+
+<div id="refs" class="references csl-bib-body hanging-indent">
+
+<div id="ref-ewels2016" class="csl-entry">
+
+Ewels, Philip, Måns Magnusson, Sverker Lundin, and Max Käller. 2016.
+“MultiQC: Summarize Analysis Results for Multiple Tools and Samples in a
+Single Report.” *Bioinformatics* 32 (19): 3047–48.
+<https://doi.org/10.1093/bioinformatics/btw354>.
+
+</div>
+
+</div>
