knit 00.10-trimming-fastp-FastQC-MultiQC.Rmd to MD/HTML

--- a/code/00.10-trimming-fastp-FastQC-MultiQC.md
+++ b/code/00.10-trimming-fastp-FastQC-MultiQC.md
@@ -1,42 +1,23 @@
----
-title: "00.10-trimming-fastp-FastQC-MultiQC"
-author: "Sam White"
-date: "2024-11-07"
-output: 
-  bookdown::html_document2:
-    theme: cosmo
-    toc: true
-    toc_float: true
-    number_sections: true
-    code_folding: show
-    code_download: true
-  github_document:
-    toc: true
-    number_sections: true
-  html_document:
-    theme: cosmo
-    toc: true
-    toc_float: true
-    number_sections: true
-    code_folding: show
-    code_download: true
-bibliography: references.bib
----
+00.10-trimming-fastp-FastQC-MultiQC
+================
+Sam White
+2024-11-07
 
-```{r setup, include=FALSE}
-library(knitr)
-knitr::opts_chunk$set(
-  echo = TRUE,         # Display code chunks
-  eval = FALSE,        # Evaluate code chunks
-  warning = FALSE,     # Hide warnings
-  message = FALSE,     # Hide messages
-  comment = ""         # Prevents appending '##' to beginning of lines in code output
-)
-```
+- <a href="#1-create-a-bash-variables-file"
+  id="toc-1-create-a-bash-variables-file">1 Create a Bash variables
+  file</a>
+- <a href="#2-fastp-trimming" id="toc-2-fastp-trimming">2 Fastp
+  Trimming</a>
+- <a href="#3-quality-check-with-fastqc-and-multiqc"
+  id="toc-3-quality-check-with-fastqc-and-multiqc">3 Quality Check with
+  FastQC and MultiQC</a>
 
 ------------------------------------------------------------------------
 
-This Rmd file trims WGBS-seq files using [fastp](https://github.com/OpenGene/fastp) [@chen2023], followed by quality checks with [FastQC](https://github.com/s-andrews/FastQC) and [MultiQC](https://multiqc.info/)[@ewels2016].
+This Rmd file trims WGBS-seq files using
+[fastp](https://github.com/OpenGene/fastp) (Chen 2023), followed by
+quality checks with [FastQC](https://github.com/s-andrews/FastQC) and
+[MultiQC](https://multiqc.info/)(Ewels et al. 2016).
 
 Expects input files formatted like so: `<number>M_[12].fastq.gz`
 
@@ -44,11 +25,11 @@ All trimmed FastQs produced by this script are here:
 
 [00.10-trimming-fastp-FastQC-MultiQC/trimmed-fastqs/](https://gannet.fish.washington.edu/Atumefaciens/gitrepos/project-mytilus-methylation/output/00.10-trimming-fastp-FastQC-MultiQC/trimmed-fastqs/)
 
-# Create a Bash variables file
+# 1 Create a Bash variables file
 
 This allows usage of Bash variables across R Markdown chunks.
 
-```{r save-bash-variables-to-rvars-file, engine='bash', eval=TRUE}
+``` bash
 {
 echo "#### Assign Variables ####"
 echo ""
@@ -92,13 +73,44 @@ echo ""
 cat .bashvars
 ```
 
+    #### Assign Variables ####
+
+    # Data directories
+    export repo_dir="/gscratch/scrubbed/samwhite/gitrepos/project-mytilus-methylation"
+    export output_dir_top="${repo_dir}/output/00.10-trimming-fastp-FastQC-MultiQC"
+    export raw_reads_dir="${repo_dir}/data/raw-wgbs"
+    export raw_reads_url="https://owl.fish.washington.edu/nightingales/M_trossulus/"
+    export trimmed_fastqs_dir=${output_dir_top}/trimmed-fastqs
+    export trimmed_fastqc_dir=${output_dir_top}/trimmed-fastqc
+
+    # Set FastQ filename patterns
+    export fastq_pattern='*.fastq.gz'
+    export R1_fastq_pattern='*_1.fastq.gz'
+    export R2_fastq_pattern='*_2.fastq.gz'
+    export trimmed_fastq_pattern='*fastp-trim.fq.gz'
+
+    # Set number of CPUs to use
+    export threads=50
+
+    ## Inititalize arrays
+    export fastq_array_R1=()
+    export fastq_array_R2=()
+    export raw_fastqs_array=()
+    export R1_names_array=()
+    export R2_names_array=()
+
+    # Print formatting
+    export line="--------------------------------------------------------"
+
 If needed, download raw FastQs.
 
-Change `eval=FALSE` to `eval=TRUE` to execute the next two chunks to download RNA-seq and then verify MD5 checksums.
+Change `eval=FALSE` to `eval=TRUE` to execute the next two chunks to
+download RNA-seq and then verify MD5 checksums.
 
-Reads are downloaded from <https://owl.fish.washington.edu/nightingales/M_trossulus/>
+Reads are downloaded from
+<https://owl.fish.washington.edu/nightingales/M_trossulus/>
 
-```{bash download-raw-reads, engine='bash', eval=FALSE}
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -125,7 +137,7 @@ ls -lh "${raw_reads_dir}"
 
 Verify raw read checksums
 
-```{bash verify-raw-read-checksums, engine='bash', eval=FALSE}
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -138,11 +150,14 @@ do
 done
 ```
 
-# Fastp Trimming
+# 2 Fastp Trimming
 
-[fastp](https://github.com/OpenGene/fastp) [@chen2023] is set to auto-detect Illumina adapters, as well as trim the first 20bp from each read, as past experience shows these first 20bp are more inconsistent than the remainder of the read length.
+[fastp](https://github.com/OpenGene/fastp) (Chen 2023) is set to
+auto-detect Illumina adapters, as well as trim the first 20bp from each
+read, as past experience shows these first 20bp are more inconsistent
+than the remainder of the read length.
 
-```{bash fastp-trimming, engine='bash', eval=FALSE}
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -204,9 +219,9 @@ do
 done
 ```
 
-# Quality Check with FastQC and MultiQC
+# 3 Quality Check with FastQC and MultiQC
 
-```{bash trimmed-fastqc-multiqc, engine='bash', eval=FALSE}
+``` bash
 # Load bash variables into memory
 source .bashvars
 
@@ -254,3 +269,24 @@ rm ${trimmed_fastqs_dir}/*.zip
 echo "FastQC zip files removed."
 echo ""
 ```
+
+<div id="refs" class="references csl-bib-body hanging-indent">
+
+<div id="ref-chen2023" class="csl-entry">
+
+Chen, Shifu. 2023. “Ultrafast One-Pass FASTQ Data Preprocessing, Quality
+Control, and Deduplication Using Fastp.” *iMeta* 2 (2).
+<https://doi.org/10.1002/imt2.107>.
+
+</div>
+
+<div id="ref-ewels2016" class="csl-entry">
+
+Ewels, Philip, Måns Magnusson, Sverker Lundin, and Max Käller. 2016.
+“MultiQC: Summarize Analysis Results for Multiple Tools and Samples in a
+Single Report.” *Bioinformatics* 32 (19): 3047–48.
+<https://doi.org/10.1093/bioinformatics/btw354>.
+
+</div>
+
+</div>
