--- a/code/01.1-bismark-min_score.Rmd
+++ b/code/01.1-bismark-min_score.Rmd
@@ -5,108 +5,16 @@ date: "2024-11-07"
 author: Steven Roberts
 ---
 
-Raw files ../data/raw-wgbs
+
+```{bash}
+wget -r \
+--no-directories --no-parent \
+-P ../data \
+-A "*.fastp-trim.fq.gz" https://gannet.fish.washington.edu/Atumefaciens/gitrepos/project-mytilus-methylation/output/00.10-trimming-fastp-FastQC-MultiQC/trimmed-fastqs/
+```
 
 
-Indexed prepped genome: ../output/01-bismark-init
 
-
-#!/bin/bash
-# Set directories and files
-reads_dir="../../data/"
-genome_folder="../../data/genome"
-output_dir="."
-checkpoint_file="completed_samples.log"
-
-# Create the checkpoint file if it doesn't exist
-touch ${checkpoint_file}
-
-# Get the list of sample files and corresponding sample names
-files=(${reads_dir}*R1_001.fastp-trim.20220827.fq.gz)
-file="${files[$SLURM_ARRAY_TASK_ID]}"
-sample_name=$(basename "$file" "_R1_001.fastp-trim.20220827.fq.gz")
-
-# Check if the sample has already been processed
-if grep -q "^${sample_name}$" ${checkpoint_file}; then
-    echo "Sample ${sample_name} already processed. Skipping..."
-    exit 0
-fi
-
-# Define log files for stdout and stderr
-stdout_log="${output_dir}/${sample_name}_stdout.log"
-stderr_log="${output_dir}/${sample_name}_stderr.log"
-
-# Define the array of score_min parameters to test
-score_min_params=(
-    "L,0,-0.4"
-    "L,0,-0.6"
-    "L,0,-0.8"
-    "L,0,-1.0"
-    "L,-1,-0.6"
-)
-
-# Loop through each score_min parameter
-for score_min in "${score_min_params[@]}"; do
-    echo "Running Bismark for sample ${sample_name} with score_min ${score_min}"
-    
-    # Create a subdirectory for this parameter
-    param_output_dir="${output_dir}/${sample_name}_score_${score_min//,/}"
-    mkdir -p ${param_output_dir}
-
-    # Run Bismark alignment
-    bismark \
-        -genome ${genome_folder} \
-        -p 8 \
-        -u 10000 \
-        -score_min ${score_min} \
-        --non_directional \
-        -1 ${reads_dir}${sample_name}_R1_001.fastp-trim.20220827.fq.gz \
-        -2 ${reads_dir}${sample_name}_R2_001.fastp-trim.20220827.fq.gz \
-        -o ${param_output_dir} \
-        --basename ${sample_name}_${score_min//,/} \
-        2> "${param_output_dir}/${sample_name}-${SLURM_ARRAY_TASK_ID}-bismark_summary.txt"
-
-    # Check if the command was successful
-    if [ $? -eq 0 ]; then
-        echo "Sample ${sample_name} with score_min ${score_min} processed successfully."
-    else
-        echo "Sample ${sample_name} with score_min ${score_min} failed. Check ${stderr_log} for details."
-    fi
-done
-
-# Mark the sample as completed in the checkpoint file
-if [ $? -eq 0 ]; then
-    echo ${sample_name} >> ${checkpoint_file}
-    echo "All tests for sample ${sample_name} completed."
-else
-    echo "Sample ${sample_name} encountered errors. Check logs for details."
-fi
-
-# Define directories
-output_dir="."
-summary_file="${output_dir}/parameter_comparison_summary.csv"
-
-# Initialize summary file
-#echo "Sample,Score_Min,Alignment_Rate,Unique_Alignments,Mismatch_Rate,Bisulfite_Efficiency" > ${summary_file}
-
-# Loop through parameter output directories
-for dir in ${output_dir}/*_score_*; do
-    if [ -d "$dir" ]; then
-        # Extract sample name and score_min parameter from directory name
-        sample_name=$(basename "$dir" | cut -d'_' -f1)
-        score_min=$(basename "$dir" | grep -o "score_.*" | sed 's/score_//; s/_/,/g')
-
-        # Locate the summary file
-        summary_file_path="${dir}/${sample_name}_${score_min}_PE_report.txt"
-
-        # Extract metrics
-        mapping=$(grep "Mapping efficiency:" ${summary_file_path} | awk '{print "mapping efficiency ", $3}')
-        
-
-        # Append to the summary file
-        echo "${sample_name},${score_min},${mapping}" >> ${summary_file}
-    fi
-done
 
 
 
@@ -114,78 +22,35 @@ done
 
 ```{bash}
 # Set variables
-reads_dir="../data/raw-wgbs/"
-#bismark_dir="/path/to/bismark/"
-#bowtie2_dir="/path/to/bowtie2/"
-genome_folder="../output/01-bismark-init/"
-output_dir="../output/01-bismark-init/"
-
+reads_dir="../data/"
+genome_folder="../data/Bisulfite_Genome"
+output_dir="../output/01.1-bismark-min_score/"
 
 # Get the list of sample files and corresponding sample names
-files=(${reads_dir}*R1_001.fastp-trim.20220827.fq.gz)
-sample_name=$(basename "$file" "_R1_001.fastp-trim.20220827.fq.gz")
-
-# Check if the sample has already been processed
-if grep -q "^${sample_name}$" ${checkpoint_file}; then
-    echo "Sample ${sample_name} already processed. Skipping..."
-    exit 0
-fi
-
-
-
-
-
-# Define the array of score_min parameters to test
-score_min_params=(
-    "L,0,-0.4"
-    "L,0,-0.6"
-    "L,0,-0.8"
-    "L,0,-1.0"
-    "L,-1,-0.6"
-)
-
-# Loop through each score_min parameter
-for score_min in "${score_min_params[@]}"; do
-    echo "Running Bismark for sample ${sample_name} with score_min ${score_min}"
+for file in ${reads_dir}*_R1.fastp-trim.fq.gz; do
+    sample_name=$(basename "$file" "_R1.fastp-trim.fq.gz")
     
-
-    # Run Bismark alignment
-    bismark \
-        -genome ${genome_folder} \
-        -p 8 \
-        -u 10000 \
-        -score_min ${score_min} \
-        --non_directional \
-        -1 ${reads_dir}${sample_name}_R1_001.fastp-trim.20220827.fq.gz \
-        -2 ${reads_dir}${sample_name}_R2_001.fastp-trim.20220827.fq.gz \
-        -o ${param_output_dir} \
-        --basename ${sample_name}_${score_min//,/} \
-        2> "${param_output_dir}/${sample_name}-${SLURM_ARRAY_TASK_ID}-bismark_summary.txt"
-
-
-
-
-
-
-    bismark \
-    -genome ${genome_folder} \
-    -p 30 \
-    -score_min L,0,-0.6 \
-    --non_directional \
-    -1 ${reads_dir}${sample_name}_1.fastq.gz \
-    -2 ${reads_dir}${sample_name}_2.fastq.gz \
-    -o ${output_dir} \
-    > ${stdout_log} 2> ${stderr_log}
-
-    # Check if the command was successful
-    if [ $? -eq 0 ]; then
-        # Append the sample name to the checkpoint file
-        echo ${sample_name} >> ${checkpoint_file}
-        echo "Sample ${sample_name} processed successfully."
-    else
-        echo "Sample ${sample_name} failed. Check ${stderr_log} for details."
-        break
-    fi
+    # Loop through each score_min parameter manually
+    for score_min in "L,0,-0.4" "L,0,-0.6" "L,0,-0.8" "L,0,-1.0" "L,-1,-0.6"; do
+        echo "Running Bismark for sample ${sample_name} with score_min ${score_min}"
+        
+        # Define output directory for each parameter
+        param_output_dir="${output_dir}${sample_name}_${score_min//,/}"
+        mkdir -p ${param_output_dir}
+        
+        # Run Bismark alignment
+        /home/shared/Bismark-0.24.0/bismark \
+            --path_to_bowtie2 /home/shared/bowtie2-2.4.4-linux-x86_64
+            -genome ../data/Bisulfite_Genome/ \
+            -p 8 \
+            -u 10000 \
+            -score_min ${score_min} \
+            -1 ${reads_dir}${sample_name}_R1.fastp-trim.fq.gz \
+            -2 ${reads_dir}${sample_name}_R2.fastp-trim.fq.gz \
+            -o ${param_output_dir} \
+            --basename ${sample_name}_${score_min//,/} \
+            2> "${param_output_dir}/${sample_name}-bismark_summary.txt"
+    done
 done
 ```
 
