--- a/code/01.1-bismark-min_score.Rmd
+++ b/code/01.1-bismark-min_score.Rmd
@@ -23,7 +23,7 @@ wget -r \
 ```{bash}
 # Set variables
 reads_dir="../data/"
-genome_folder="../data/Bisulfite_Genome"
+genome_folder="../data/"
 output_dir="../output/01.1-bismark-min_score/"
 
 # Get the list of sample files and corresponding sample names
@@ -40,8 +40,8 @@ for file in ${reads_dir}*_R1.fastp-trim.fq.gz; do
         
         # Run Bismark alignment
         /home/shared/Bismark-0.24.0/bismark \
-            --path_to_bowtie2 /home/shared/bowtie2-2.4.4-linux-x86_64
-            -genome ../data/Bisulfite_Genome/ \
+            --path_to_bowtie2 /home/shared/bowtie2-2.4.4-linux-x86_64 \
+            -genome ../data/ \
             -p 8 \
             -u 10000 \
             -score_min ${score_min} \
@@ -54,4 +54,35 @@ for file in ${reads_dir}*_R1.fastp-trim.fq.gz; do
 done
 ```
 
+
+
+
+
+```{bash}
+# Set variables
+reads_dir="../data/"
+genome_folder="../data/"
+output_dir="../output/01.2-bismark"
+score_min="L,0,-1.0"  # Single value for score_min
+
+# Get the list of sample files and corresponding sample names
+for file in ${reads_dir}*_R1.fastp-trim.fq.gz; do
+    sample_name=$(basename "$file" "_R1.fastp-trim.fq.gz")
+    
+    echo "Running Bismark for sample ${sample_name} with score_min ${score_min}"
+
+    
+    # Run Bismark alignment
+    /home/shared/Bismark-0.24.0/bismark \
+        --path_to_bowtie2 /home/shared/bowtie2-2.4.4-linux-x86_64 \
+        -genome ${genome_folder} \
+        -p 8 \
+        -score_min ${score_min} \
+        -1 ${reads_dir}${sample_name}_R1.fastp-trim.fq.gz \
+        -2 ${reads_dir}${sample_name}_R2.fastp-trim.fq.gz \
+        -o ${output_dir} \
+        --basename ${sample_name} \
+        2> "${output_dir}/${sample_name}-bismark_summary.txt"
+done
+```
 
