--- a/code/09-meth-quant.Rmd
+++ b/code/09-meth-quant.Rmd
@@ -9,7 +9,6 @@ with code 01.1
 
 alignments done as 
 
-```
 ```{bash}
 # Set variables
 reads_dir="../data/"
@@ -37,6 +36,54 @@ for file in ${reads_dir}*_R1.fastp-trim.fq.gz; do
         2> "${output_dir}/${sample_name}-bismark_summary.txt"
 done
 ```
+
+
+
+
+## missed sample (93)
+
+```{bash}
+cd ../data
+
+curl -O https://gannet.fish.washington.edu/Atumefaciens/gitrepos/project-mytilus-methylation/output/00.10-trimming-fastp-FastQC-MultiQC/trimmed-fastqs/93M_R1.fastp-trim.fq.gz
+```
+
+```{bash}
+cd ../data
+
+curl -O https://gannet.fish.washington.edu/Atumefaciens/gitrepos/project-mytilus-methylation/output/00.10-trimming-fastp-FastQC-MultiQC/trimmed-fastqs/93M_R2.fastp-trim.fq.gz
+```
+
+
+```{bash}
+# Set variables
+reads_dir="../data/"
+genome_folder="../data/"
+output_dir="../output/01.2-bismark"
+score_min="L,0,-1.0"  # Single value for score_min
+
+# Get the list of sample files and corresponding sample names
+for file in ${reads_dir}93M_R1.fastp-trim.fq.gz; do
+    sample_name=$(basename "$file" "_R1.fastp-trim.fq.gz")
+    
+    echo "Running Bismark for sample ${sample_name} with score_min ${score_min}"
+
+    
+    # Run Bismark alignment
+    /home/shared/Bismark-0.24.0/bismark \
+        --path_to_bowtie2 /home/shared/bowtie2-2.4.4-linux-x86_64 \
+        -genome ${genome_folder} \
+        -p 8 \
+        -score_min ${score_min} \
+        -1 ${reads_dir}${sample_name}_R1.fastp-trim.fq.gz \
+        -2 ${reads_dir}${sample_name}_R2.fastp-trim.fq.gz \
+        -o ${output_dir} \
+        --basename ${sample_name} \
+        2> "${output_dir}/${sample_name}-bismark_summary.txt"
+done
+```
+
+
 
 
 Besides reports this produced bam files that need to be deduplicated
